Fix : Fix CSS on mobile view

--- a/assets/css/queries.css
+++ b/assets/css/queries.css
@@ -1,127 +1,148 @@
-/* Smartphones (portrait and landscape) ----------- */
-@media only screen 
-and (min-device-width : 0px) 
-and (max-device-width : 480px) {
+/*------------------------------------------
+  Responsive Grid Media Queries - 1280, 1024, 768, 480
+   1280-1024   - desktop (default grid)
+   1024-768    - tablet landscape
+   768-480     - tablet 
+   480-less    - phone landscape & smaller
+--------------------------------------------*/
+@media all and (min-width: 1024px) and (max-width: 1280px) {
+}
 
-    .column_1 {
-        display: flex;
-        flex-wrap: wrap;
-        width: 100%;
-        padding: 10px;
-    }
+@media all and (min-width: 768px) and (max-width: 1024px) {
+}
 
-    .column_2 {
-        display: flex;
-        flex-wrap: wrap;
-        width: 100%;
-        padding: 25px;
-        background-color: hsl(183, 100%, 15%);
-        border-radius: 15px;
-        height: 140px;
-    }
+@media all and (min-width: 480px) and (max-width: 768px) {
+}
 
-    .tips_container {
-        width: 100%;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        margin-bottom: 30px;
-        margin-top: 30px;
-    }
+@media all and (max-width: 480px) {
+  .column_1 {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    padding: 10px;
+  }
 
-    .number_container {
-        width: 100%;
-        flex-wrap: wrap;
-        margin-bottom: 25px;
-    }
+  .column_2 {
+    display: flex;
+    flex-wrap: wrap;
+    width: 100%;
+    padding: 25px;
+    background-color: hsl(183, 100%, 15%);
+    border-radius: 15px;
+    height: 140px;
+  }
 
-    .tips_container {
-        width: 100%;
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-        margin-bottom: 30px;
-        margin-top: 30px;
-        height: 200px;
-    }
+  .tips_container {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-bottom: 30px;
+    margin-top: 30px;
+  }
 
-    .buttonCustom_discount {
-        width: 130px;
-        height: 40px;
-        color: hsl(183, 100%, 15%);
-        border: none;
-        background-color: hsl(185, 41%, 84%);
-        border-radius: 5px;
-        font-weight: 600;
-        font-size: 1rem;
-    }
+  .number_container {
+    width: 100%;
+    flex-wrap: wrap;
+    margin-bottom: 25px;
+  }
 
-    .button_discount {
-        width: 130px;
-        height: 40px;
-        color: #fff;
-        border: none;
-        background-color: hsl(183, 100%, 15%);
-        border-radius: 5px;
-        font-weight: 600;
-        font-size: 1rem;
-    }
+  .tips_container {
+    width: 100%;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    margin-bottom: 30px;
+    margin-top: 30px;
+    height: 200px;
+  }
 
-    .header_container {
-        display: flex;
-        min-height: 20vh;
-        width: 100%;
-    }
+  .buttonCustom_discount {
+    width: 130px;
+    height: 40px;
+    color: hsl(183, 100%, 15%);
+    border: none;
+    background-color: hsl(185, 41%, 84%);
+    border-radius: 5px;
+    font-weight: 600;
+    font-size: 1rem;
+  }
 
-    .font_total_tip {
-        font-size: 2rem;
-        color: hsl(172, 67%, 45%);
-        font-weight: 400;
-    }
+  .button_discount {
+    width: 130px;
+    height: 40px;
+    color: #fff;
+    border: none;
+    background-color: hsl(183, 100%, 15%);
+    border-radius: 5px;
+    font-weight: 600;
+    font-size: 1rem;
+  }
 
-    .font_total {
-        font-size: 2rem;
-        color: hsl(172, 67%, 45%);
-        font-weight: 400;
-    }
+  .button_discount:hover {
+    width: 130px;
+    height: 40px;
+    color: hsl(183, 100%, 15%);
+    border: none;
+    background-color: #26c2ad;
+    border-radius: 5px;
+    font-weight: 600;
+    font-size: 1rem;
+  }
 
-    .input_bill {
-        width: 90%;
-        height: 35px;
-        color: hsl(183, 100%, 15%);
-        border: none;
-        background-color: hsl(185, 41%, 84%);
-        border-radius: 5px;
-        text-align: right;
-        padding-right: 5%;
-        padding-left: 5%;
-        background-image: url("../images/icon-dollar.svg");
-        background-position: left;
-        background-size: auto;
-        background-repeat: no-repeat;
-        background-origin: content-box;
-        font-weight: 600;
-        font-size: 1rem;
-    }
+  .header_container {
+    display: flex;
+    min-height: 20vh;
+    width: 100%;
+  }
 
-    .input_number{
+  .font_total_tip {
+    font-size: 2rem;
+    color: hsl(172, 67%, 45%);
+    font-weight: 400;
+  }
 
-        width: 90%;
-        height: 35px;
-        color: hsl(183, 100%, 15%);
-        border: none;
-        background-color: hsl(185, 41%, 84%);
-        border-radius: 5px;
-        text-align: right;
-        padding-right: 5%;
-        padding-left: 5%;
-        background-image: url("../images/icon-person.svg");
-        background-position: left;
-        background-size: auto;
-        background-repeat: no-repeat;
-        background-origin: content-box;
-        font-weight: 600;
-        font-size: 1rem;
-    }
+  .font_total {
+    font-size: 2rem;
+    color: hsl(172, 67%, 45%);
+    font-weight: 400;
+  }
 
+  .input_bill {
+    width: 90%;
+    height: 35px;
+    color: hsl(183, 100%, 15%);
+    border: none;
+    background-color: hsl(185, 41%, 84%);
+    border-radius: 5px;
+    text-align: right;
+    padding-right: 5%;
+    padding-left: 5%;
+    background-image: url("../images/icon-dollar.svg");
+    background-position: left;
+    background-size: auto;
+    background-repeat: no-repeat;
+    background-origin: content-box;
+    font-weight: 600;
+    font-size: 1rem;
+  }
+
+  .input_number {
+    width: 90%;
+    height: 35px;
+    color: hsl(183, 100%, 15%);
+    border: none;
+    background-color: hsl(185, 41%, 84%);
+    border-radius: 5px;
+    text-align: right;
+    padding-right: 5%;
+    padding-left: 5%;
+    background-image: url("../images/icon-person.svg");
+    background-position: left;
+    background-size: auto;
+    background-repeat: no-repeat;
+    background-origin: content-box;
+    font-weight: 600;
+    font-size: 1rem;
+  }
 }
